[gd_scene load_steps=14 format=3 uid="uid://c62hnifxmw3w2"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_qs686"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing.gd" id="2_g43ov"]
[ext_resource type="Environment" uid="uid://cogu467vyn1ef" path="res://scenes/world-items/level_cam_environment.tres" id="3_i16pd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fuvgw"]
size = Vector3(0.01, 0.01, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ve313"]
radius = 0.25
height = 1.26

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3ogmn"]
radius = 0.25
height = 1.26

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_7jdtw"]
length = 0.16

[sub_resource type="Animation" id="Animation_e01og"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sliding")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:movecam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.25664)]
}
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_rlxaj"]
resource_name = "get_up"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sliding")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:movecam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jg1vw"]
resource_name = "jump_off"
step = 0.01
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.1, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_b378h"]
resource_name = "slide_off"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:movecam")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.25664)]
}

[sub_resource type="Animation" id="Animation_1b0ja"]
resource_name = "swing_fall"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:movecam")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.71),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.7001, 0, 0), Vector3(-3.14159, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31ei7"]
_data = {
"RESET": SubResource("Animation_e01og"),
"get_up": SubResource("Animation_rlxaj"),
"jump_off": SubResource("Animation_jg1vw"),
"slide_off": SubResource("Animation_b378h"),
"swing_fall": SubResource("Animation_1b0ja")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.028, 0)
collision_layer = 2
collision_mask = 5
platform_floor_layers = 4294967265
script = ExtResource("1_qs686")

[node name="Smoothing" type="Node3D" parent="."]
script = ExtResource("2_g43ov")

[node name="Camera3D" type="Camera3D" parent="Smoothing"]
transform = Transform3D(1, -8.14856e-09, -8.73115e-09, -7.78755e-12, 1, 4.65661e-10, 0, 0, 1, -3.98159e-05, 0.454277, -0.0943924)
environment = ExtResource("3_i16pd")
current = true
fov = 100.0

[node name="SeatDetector" type="Area3D" parent="Smoothing/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
collision_layer = 2
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Smoothing/Camera3D/SeatDetector"]
shape = SubResource("BoxShape3D_fuvgw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Smoothing"]
mesh = SubResource("CapsuleMesh_ve313")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_3ogmn")

[node name="StairstepCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.457, -0.34)
shape = SubResource("SeparationRayShape3D_7jdtw")

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="AttentionTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="CarouselTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_31ei7")
}
playback_auto_capture_duration = 0.0
playback_auto_capture_ease_type = 2
playback_default_blend_time = 1.0
blend_times = [&"swing_fall", &"swing_fall", 0.5]

[connection signal="timeout" from="AttentionTimer" to="." method="_on_attention_timer_timeout"]
